--- a/app/src/main/res/layout/activity_recuperacao.xml
+++ b/app/src/main/res/layout/activity_recuperacao.xml
@@ -37,7 +37,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/email"
+                android:id="@+id/codRastreio"
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/icone_email"
                 android:drawablePadding="8dp"
@@ -55,7 +55,7 @@
                 android:paddingTop="8dp">
 
                 <Button
-                    android:id="@+id/recuperar"
+                    android:id="@+id/confirmaRastreio"
                     android:layout_width="133dp"
                     android:layout_height="58dp"
                     android:layout_marginTop="5dp"
