--- a/app/src/main/res/layout/activity_rastreio.xml
+++ b/app/src/main/res/layout/activity_rastreio.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/white"
-    tools:context=".Recuperacao">
+    tools:context=".Rastreio">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -67,7 +67,7 @@
                     app:cornerRadius="20dp" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/voltar"
                     android:layout_width="133dp"
                     android:layout_height="58dp"
                     android:layout_marginStart="32dp"
@@ -78,11 +78,7 @@
                     android:textSize="15sp"
                     app:cornerRadius="20dp" />
 
-
             </LinearLayout>
-
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
 </LinearLayout>
