--- a/app/src/main/res/layout/activity_tela_rastreio.xml
+++ b/app/src/main/res/layout/activity_tela_rastreio.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/white"
-    tools:context=".Login">
+    tools:context=".rastreio.telaRastreio">
 
     <TextView
         android:id="@+id/textView"
