--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,13 @@
     tools:context=".Login">
 
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="340dp"
+        android:layout_height="129dp"
+        app:srcCompat="@drawable/logo"
+        tools:srcCompat="@drawable/logo" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,6 +25,7 @@
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp"
         android:background="@drawable/custom_edittext">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
