--- a/app/src/main/res/layout/activity_localizacao.xml
+++ b/app/src/main/res/layout/activity_localizacao.xml
@@ -34,6 +34,9 @@
         android:background="@drawable/custom_edittext">
 
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -80,6 +83,7 @@
 
 
         </LinearLayout>
+        </ScrollView>
     </androidx.cardview.widget.CardView>
 
 
