--- a/app/src/main/res/layout/activity_recuperacao.xml
+++ b/app/src/main/res/layout/activity_recuperacao.xml
@@ -66,7 +66,7 @@
                     app:cornerRadius="20dp" />
 
                 <Button
-                    android:id="@+id/button"
+                    android:id="@+id/buttonLogin"
                     android:layout_width="133dp"
                     android:layout_height="58dp"
                     android:layout_marginStart="32dp"
