--- a/app/src/main/res/layout/activity_rastreio.xml
+++ b/app/src/main/res/layout/activity_rastreio.xml
@@ -36,7 +36,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/codRastreio"
+                android:id="@+id/edit_email"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
