--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -50,6 +50,7 @@
                 android:drawableLeft="@drawable/icone_perfil"
                 android:drawablePadding="8dp"
                 android:hint="Nome Completo"
+                android:inputType="text"
                 android:maxLength="30"
                 android:padding="8dp"
                 android:textColor="@color/black"
@@ -61,10 +62,15 @@
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/custom_edittext"
+                android:contextClickable="false"
+                android:cursorVisible="false"
                 android:drawableLeft="@drawable/icone_data"
                 android:drawablePadding="8dp"
+                android:duplicateParentState="true"
+                android:editable="false"
                 android:hint="Data de Nascimento"
-                android:maxLength="30"
+                android:inputType="date"
+                android:maxLength="8"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background" />
@@ -78,13 +84,14 @@
                 android:drawableLeft="@drawable/icone_data"
                 android:drawablePadding="8dp"
                 android:hint="Telefone"
-                android:maxLength="30"
+                android:inputType="number"
+                android:maxLength="20"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background" />
 
             <EditText
-                android:id="@+id/edit_email"
+                android:id="@+id/editTextEmail"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
@@ -92,6 +99,7 @@
                 android:drawableLeft="@drawable/icone_email"
                 android:drawablePadding="8dp"
                 android:hint="Email"
+                android:inputType="textEmailAddress"
                 android:maxLength="30"
                 android:padding="8dp"
                 android:textColor="@color/black"
@@ -106,7 +114,8 @@
                 android:drawableLeft="@drawable/icone_cpf"
                 android:drawablePadding="8dp"
                 android:hint="CPF"
-                android:maxLength="30"
+                android:inputType="number"
+                android:maxLength="11"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background" />
@@ -120,7 +129,7 @@
                 android:drawableLeft="@drawable/icone_cpf"
                 android:drawablePadding="8dp"
                 android:hint="Placa do Veiculo"
-                android:maxLength="30"
+                android:maxLength="7"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background" />
@@ -134,7 +143,8 @@
                 android:drawableLeft="@drawable/icone_cpf"
                 android:drawablePadding="8dp"
                 android:hint="Renavam do Veiculo"
-                android:maxLength="30"
+                android:inputType="number"
+                android:maxLength="11"
                 android:padding="8dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background" />
