--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -50,18 +50,18 @@
         android:layout_height="wrap_content"
         android:text="email" />
 
-    <Button
-        android:id="@+id/deslogar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/bottomNavigation"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="23dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="154dp"
-        android:text="Button" />
+        <Button
+            android:id="@+id/deslogar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/bottomNavigation"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="23dp"
+            android:layout_marginEnd="160dp"
+            android:layout_marginBottom="154dp"
+            android:text="Deslogar" />
     </LinearLayout>
 
 </RelativeLayout>
