--- a/app/src/main/res/layout/activity_recuperacao.xml
+++ b/app/src/main/res/layout/activity_recuperacao.xml
@@ -35,18 +35,19 @@
                 android:textColor="@color/black"/>
 
             <EditText
+                android:id="@+id/editTextEmail"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/edit_email"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/icone_email"
                 android:drawablePadding="8dp"
                 android:hint="Email"
-                android:padding="8dp"
+                android:inputType="textEmailAddress"
                 android:maxLength="30"
+                android:padding="8dp"
                 android:textColor="@color/black"
-                android:textColorHighlight="@color/cardview_dark_background"
-                android:layout_marginTop="20dp"/>
+                android:textColorHighlight="@color/cardview_dark_background" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,7 +56,7 @@
                 android:paddingTop="8dp">
 
                 <Button
-                    android:id="@+id/confirmaRastreio"
+                    android:id="@+id/recuperarSenha"
                     android:layout_width="133dp"
                     android:layout_height="58dp"
                     android:layout_marginTop="5dp"
