--- a/app/src/main/res/drawable/header_background.xml
+++ b/app/src/main/res/drawable/header_background.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/black"/>
+
+    <solid android:color="@color/quartz"/>
+
     <corners
-        android:radius="40dp"/>
+        android:bottomLeftRadius="30dp"
+        android:bottomRightRadius="30dp"/>
+
 </shape>
