--- a/app/src/main/res/layout/activity_recuperacao.xml
+++ b/app/src/main/res/layout/activity_recuperacao.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/white"
+    android:background="@drawable/fundoapp"
     tools:context=".Recuperacao">
 
     <androidx.cardview.widget.CardView
