--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="lavender">#8692f7</color>
     <color name="grey">#d2d2d2</color>
     <color name="cinza_fosco">#696969</color>
+    <color name="quartz">#272727</color>
 </resources>
