--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="grey">#d2d2d2</color>
     <color name="cinza_fosco">#696969</color>
     <color name="quartz">#272727</color>
+    <color name="cinza_escuro">#A9A9A9</color>
 </resources>
