--- a/app/src/main/res/layout/activity_localizacao.xml
+++ b/app/src/main/res/layout/activity_localizacao.xml
@@ -8,12 +8,29 @@
     android:background="@color/white"
     tools:context=".home.Localizacao">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/quartz">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="LOCALIZAÇÃO"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="30sp"/>
+
+    </androidx.appcompat.widget.Toolbar>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="57dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
@@ -25,66 +42,35 @@
         app:labelVisibilityMode="unlabeled"
         app:menu="@menu/bottom_menu" />
 
-    <androidx.cardview.widget.CardView
+
+    <LinearLayout
+        android:layout_below="@+id/toolbar"
+        android:id="@+id/layout1"
         android:layout_width="match_parent"
+        android:layout_height="668dp"
+        android:layout_above="@+id/bottomNavigation"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="-9dp"
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="24dp">
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button2"
+        android:layout_width="300dp"
+        android:layout_marginStart="55dp"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        android:background="@drawable/custom_edittext">
-
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:padding="24dp">
-
-            <com.google.android.gms.maps.MapView
-                android:id="@+id/mapView2"
-                android:layout_width="296dp"
-                android:layout_height="412dp" />
-
-            <TextView
-                android:id="@+id/latitudeCliente"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="AAAAAAAAAAAAAA"/>
-            <TextView
-                android:id="@+id/longitudeCliente"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="AAAAAAAAAAAAAA"/>
-            <TextView
-                android:id="@+id/latitudeLoja"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="AAAAAAAAAAAAAA"/>
-            <TextView
-                android:id="@+id/longitudeLoja"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="AAAAAAAAAAAAAA"/>
-            <TextView
-                android:id="@+id/latitudeMoto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="AAAAAAAAAAAAAA"/>
-            <TextView
-                android:id="@+id/longitudeMoto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="AAAAAAAAAAAAAA"/>
-
-
-        </LinearLayout>
-        </ScrollView>
-    </androidx.cardview.widget.CardView>
-
+        android:layout_marginTop="680dp"
+        android:paddingStart="10dp"
+        android:background="@drawable/background_bottom"
+        android:drawableLeft="@drawable/icone_check"
+        android:text="Finalizar Entrega" />
 
 </RelativeLayout>
