--- a/app/src/main/res/layout/custom_view.xml
+++ b/app/src/main/res/layout/custom_view.xml
@@ -60,6 +60,18 @@
                 app:layout_constraintTop_toBottomOf="@+id/textTitle"
                 app:layout_constraintVertical_bias="0.219" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button"
+                android:layout_width="63dp"
+                android:layout_height="44dp"
+                android:background="@drawable/baseline_local_shipping_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.917"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintTop_toBottomOf="@+id/textDesc"
+                app:layout_constraintVertical_bias="0.642" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
