--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="cinza_fosco">#696969</color>
     <color name="quartz">#272727</color>
     <color name="cinza_escuro">#A9A9A9</color>
+    <color name="verde">#32CD32</color>
+    <color name="vermelho">#E32636</color>
 </resources>
