--- a/app/src/main/res/layout/activity_recuperacao.xml
+++ b/app/src/main/res/layout/activity_recuperacao.xml
@@ -67,7 +67,7 @@
                     app:cornerRadius="20dp" />
 
                 <Button
-                    android:id="@+id/buttonLogin"
+                    android:id="@+id/btnVoltar"
                     android:layout_width="133dp"
                     android:layout_height="58dp"
                     android:layout_marginStart="32dp"
