--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,8 @@
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/icone_perfil"
                 android:drawablePadding="8dp"
-                android:hint="Usuário"
+                android:hint="Email"
+                android:textColorHint="@color/cinza_fosco"
                 android:padding="8dp"
                 android:maxLength="30"
                 android:textColor="@color/black"
@@ -59,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:id="@+id/senhaedt"
+                android:textColorHint="@color/cinza_fosco"
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/icone_cadeado"
                 android:drawablePadding="8dp"
