--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -50,6 +50,7 @@
                 android:drawableLeft="@drawable/icone_perfil"
                 android:drawablePadding="8dp"
                 android:hint="Nome Completo"
+                android:textColorHint="@color/cinza_fosco"
                 android:inputType="text"
                 android:maxLength="30"
                 android:padding="8dp"
@@ -66,6 +67,7 @@
                 android:cursorVisible="false"
                 android:drawableLeft="@drawable/icone_data"
                 android:drawablePadding="8dp"
+                android:textColorHint="@color/cinza_fosco"
                 android:duplicateParentState="true"
                 android:editable="false"
                 android:hint="Data de Nascimento"
@@ -84,6 +86,7 @@
                 android:drawableLeft="@drawable/icone_telefone"
                 android:drawablePadding="8dp"
                 android:hint="Telefone"
+                android:textColorHint="@color/cinza_fosco"
                 android:inputType="number"
                 android:maxLength="20"
                 android:padding="8dp"
@@ -95,6 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginTop="20dp"
+                android:textColorHint="@color/cinza_fosco"
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/icone_email"
                 android:drawablePadding="8dp"
@@ -114,6 +118,7 @@
                 android:drawableLeft="@drawable/icone_cpf"
                 android:drawablePadding="8dp"
                 android:hint="CPF"
+                android:textColorHint="@color/cinza_fosco"
                 android:inputType="number"
                 android:maxLength="11"
                 android:padding="8dp"
@@ -128,6 +133,7 @@
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/icone_cpf"
                 android:drawablePadding="8dp"
+                android:textColorHint="@color/cinza_fosco"
                 android:hint="Placa do Veiculo"
                 android:maxLength="7"
                 android:padding="8dp"
@@ -142,6 +148,7 @@
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/icone_cpf"
                 android:drawablePadding="8dp"
+                android:textColorHint="@color/cinza_fosco"
                 android:hint="Renavam do Veiculo"
                 android:inputType="number"
                 android:maxLength="11"
@@ -157,6 +164,7 @@
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/icone_cadeado"
                 android:drawablePadding="8dp"
+                android:textColorHint="@color/cinza_fosco"
                 android:hint="Senha"
                 android:inputType="textPassword"
                 android:maxLength="30"
